--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "typescript-study-api",
+  "name": "bills-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Bills Api - Uma platafoma de controle financeiro",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint ./ --fix"
+    "lint": "eslint ./ --fix",
+    "dev": "tsx watch ./src/serve.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": {
+    "name": "Adriano dos Anjos",
+    "email": "Adriano.luizysa@gmail.com",
+    "url": "https://portifolio10.netlify.app/"
+  },
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -19,6 +24,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
+    "tsx": "^4.19.3",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.22.0"
   },
